--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,6 @@
 @import "node_modules/bootstrap/scss/bootstrap";
+
+.btn-no-outline, .btn-no-outline:active, .btn-no-outline:focus, .btn-no-outline:active:focus {
+    outline: none !important;
+    box-shadow: none !important;
+}
